# litsync

./: .gitignore  README.md
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/sourav/litsync/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/sourav/litsync/: DiscoveryManager.kt  LitSyncState.kt  MainActivity.kt  NetworkManager.kt  ServerManager.kt  SyncService.kt  Watcher.kt
app/app/src/main/java/com/sourav/litsync/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/drawable/: ic_launcher_background.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/sourav/litsync/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
daemon/: CMakeLists.txt
daemon/include/: discovery.hpp  network.hpp  sync_manager.hpp  sync_state.hpp  watcher.hpp
daemon/src/: discovery.cpp  main.cpp  network.cpp  sync_manager.cpp  watcher.cpp
